--- a/.gitignore
+++ b/.gitignore
@@ -328,3 +328,5 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+GNIBIRPAndVisaAppointment.Webhook.Web/appsettings.Development.json
+.vscode/
